# NP.CoPilot.AgentMemory

./: .gitignore  .mcp.json  README.md  bootstrap.py  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
docs/: PLAN.md  TASKS.md  phase-2-final-review-handover.md  phase-2-review-actions.md  phase-3-next-steps.md  phase-3-review-actions.md  spike-0.md  spike-roots.md
docs/decisions/: 0001-stdio-vs-long-lived-backend.md  0002-cross-agent-addressing-public-handle.md  0003-public-distribution-bootstrap.md  0004-launcher-via-uvx.md  0005-note-soft-delete.md  0006-sticky-agent-name.md  0007-handover-dead-letter.md  0008-blocker-escalate.md
docs/features/: phase-4-memory-todos.md  phase-5-7-blockers-handovers-inbox-backup.md  public-distribution.md
docs/handoffs/: README.md  phase-09-connects-ingest-rewrite.md  phase-10-handover-report-skill-rewrite.md  phase-11-workstream-instructions-update.md  phase-12-handover-backfill.md
docs/research/: dotnet-mcp-port-feasibility.md
docs/reviews/: 2026-06-10-full-review.md
server/np_agent_memory/: __init__.py  __main__.py  backup.py  db.py  identity.py  startup.py
server/np_agent_memory/migrations/: 0001_init.sql  0002_add_notes_deleted_at.sql  0003_add_handovers_quarantine.sql  __init__.py
server/np_agent_memory/tools/: __init__.py  _common.py  agents.py  blockers.py  handovers.py  inbox.py  memory.py  todos.py
server/tests/: __init__.py  test_agents.py  test_backup.py  test_blockers.py  test_bootstrap.py  test_common.py  test_db.py  test_handovers.py  test_inbox.py  test_main.py  test_memory.py  test_migrations.py  test_startup.py  test_todos.py  test_unicode.py
skills/agent-memory/: SKILL.md
spike/: .mcp.json  README.md  install.ps1
spike/.claude-plugin/: marketplace.json  plugin.json
spike/server/spike_server/: __init__.py  __main__.py
spike/skills/np-agent-memory-spike/: SKILL.md
templates/: agent-memory-usage.instructions.md
