# Tooling configuration for np-agent-memory.
# Ruff is the project linter + formatter (Black-compatible). Run:
#   ruff check server          # lint
#   ruff check --fix server    # lint + autofix
#   ruff format server         # format

[project]
name = "np-agent-memory"
version = "0.4.0"
description = "Shared SQLite-backed memory + cross-agent inbox for Copilot CLI agents."
# Python 3.12+ is REQUIRED: the migration runner relies on
# sqlite3.connect(autocommit=True) (PEP 249 mode, new in 3.12) and datetime.UTC.
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import ordering)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over some bugbear/simplify rules.
"server/tests/**" = ["B011", "SIM117"]
# Entry point runs a Python-version guard before its version-specific imports
# (datetime.UTC / sqlite3 autocommit), so imports intentionally follow code.
"server/np_agent_memory/__main__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
